[server] sucurity updated